# SavageSploit

./: .gitignore  CMakeLists.txt  Gayfag  library.h
savagesploit-dumper/: go.sum  main.go
savagesploit-injector/: CMakeLists.txt  main.cpp
savagesploit-module/: CMakeLists.txt  entry.cpp  entry.h  globals.h  vcpkg.json
savagesploit-module/dependencies/imgui/: CMakeLists.txt
savagesploit-module/dependencies/ixwebsocket/: CMakeLists.txt
savagesploit-module/dependencies/luau/VM/include/: lua.h
savagesploit-module/dependencies/luau/VM/src/: lapi.cpp  lobject.h
savagesploit-module/src/core/environment/: environment.cpp  environment.h
savagesploit-module/src/core/environment/libs/: closure.cpp  filesystem.cpp  http.cpp  metatable.cpp  misc.cpp
savagesploit-module/src/core/execution/: execution.cpp  execution.h
savagesploit-module/src/core/render/: render.cpp  render.h
savagesploit-module/src/core/render/user_interface/: user_interface.cpp  user_interface.h
savagesploit-module/src/rbx/engine/: game.h  hyperion.h
